# math-fullstack-app

./: .gitignore  Cargo.toml  README.md  index.html  webpack.config.js
scripts/: bot.js  input.js  redirect.js  switch_mode.js
src/: main.rs  task.rs
src/task/: solves.rs
styles/: style.css
templates/: admin-panel.html  index.html  instruction.html  login.html  no-rights.html  not_found.html
