[package]
name = "actix_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
env_logger = "0.11.3"
tokio = "1.36.0"
actix-files = "0.6.5"
futures = "0.3.30"
futures-util = "0.3.30"