[package]
name = "actix_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-files = "0.6.5"
actix-session = { version = "0.9", features = ["cookie-session"] }
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.30"
chrono = "0.4.35"


[profile.release]
opt-level = 3


[profile.dev]
opt-level = 0
